[package]
name = "ip-auto-ssl"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.10", features = ["json"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
dotenv = "0.15.0"
rcgen = { version = "0.13.2", features = ["pem", "x509-parser", "ring", "crypto", "zeroize"] }
clap = { version = "4.5.23", features = ["derive", "env", "color", "suggestions"] }
